k8s/apps/security/authentik/outposts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: authentik-outpost
    namespace: security
spec:
    ingressClassName: nginx
    rules:
      - host: uptime.${SECRET_DOMAIN}
        http:
          paths:
          - backend:
              service:
                name: authentik-outpost
                port:
                  name: http
            path: /outpost.goauthentik.io
            pathType: Prefix
